# http-tunnel

./: .gitignore  Cargo.toml  README.md  README_EN.md  build-ci.sh  build.sh
.github/workflows/: build-release.yml
crates/http-tunnel-client/: Cargo.toml
crates/http-tunnel-client/src/: cli.rs  config.rs  connect.rs  doctor.rs  http_forward.rs  main.rs  runtime.rs  ws_forward.rs
crates/http-tunnel-common/: Cargo.toml  build.rs
crates/http-tunnel-common/src/: api.rs  build_info.rs  config.rs  country.rs  error.rs  headers.rs  ids.rs  ip.rs  lib.rs  password.rs  subdomain.rs  timefmt.rs  token.rs
crates/http-tunnel-protocol/: Cargo.toml
crates/http-tunnel-protocol/src/: codec.rs  error.rs  frame.rs  lib.rs  stream.rs  types.rs  version.rs
crates/http-tunnel-server/: Cargo.toml  build.rs
crates/http-tunnel-server/public/: 404.html  index.html  index.txt  login.html
crates/http-tunnel-server/public/404/: index.html
crates/http-tunnel-server/public/admin/: index.html  index.txt
crates/http-tunnel-server/public/admin/login/: index.html  index.txt
crates/http-tunnel-server/public/admin/setup/: index.html  index.txt
crates/http-tunnel-server/src/: app.rs  backup.rs  cli.rs  db.rs  error.rs  geoip.rs  main.rs  net.rs  redaction.rs  state.rs
crates/http-tunnel-server/src/routes/: health.rs  metrics.rs  mod.rs  setup.rs  tunnels.rs
crates/http-tunnel-server/src/routes/admin/: alerts.rs  auth.rs  backup.rs  config.rs  diagnostics.rs  logs.rs  maintenance.rs  mod.rs  upgrade.rs
crates/http-tunnel-server/src/routes/github_proxy/: matcher.rs  mod.rs  rewrite.rs  rules.rs  upstream.rs
crates/http-tunnel-server/src/routes/proxy/: http.rs  mod.rs  pages.rs  ws.rs
crates/http-tunnel-server/tests/: e2e_http.rs
dashboard/: components.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/admin/: admin-console.tsx  page.tsx
dashboard/app/admin/login/: page.tsx
dashboard/app/admin/setup/: page.tsx
dashboard/components/: metric-card.tsx  state-block.tsx  theme-toggle.tsx
dashboard/components/layout/: admin-shell.tsx  top-bar.tsx
dashboard/components/ui/: badge.tsx  button.tsx  card.tsx  select.tsx  table.tsx  tabs.tsx  textarea.tsx  toast.tsx
dashboard/lib/: api.ts  types.ts  utils.ts
dashboard/scripts/: sync-public.mjs
dashboard/src/: admin.html  setup.html
docs/: admin.md  client.md  cloudflare.md  deployment.md  production-hardening.md  release-checklist.md  security.md  troubleshooting.md
migrations/: 0001_init.sql
schema/: initial.sql
