[package]
name = "http-tunnel-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
clap.workspace = true
futures-util.workspace = true
http-tunnel-common = { path = "../http-tunnel-common" }
http-tunnel-protocol = { path = "../http-tunnel-protocol" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
