[package]
name = "http-tunnel-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
base64.workspace = true
bytes.workspace = true
clap.workspace = true
flate2.workspace = true
futures-util.workspace = true
hmac.workspace = true
http-tunnel-common = { path = "../http-tunnel-common" }
http-tunnel-protocol = { path = "../http-tunnel-protocol" }
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
include_dir.workspace = true
maxminddb.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zip.workspace = true

[dev-dependencies]
reqwest.workspace = true
serde_json.workspace = true
tokio-tungstenite.workspace = true
